--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,10 @@
 
 .container {
   height: 100%;
-  background-color: #0d1116;
+  /* background-color: #0d1116; */
+  background: linear-gradient(-45deg, #004053, #080f11);
+  background-size: 200% 200%;
+  animation: gradient-animation 10s ease infinite;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
