--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   /* background-color: #0d1116; */
   background: linear-gradient(-45deg, #004053, #080f11);
   background-size: 200% 200%;
-  animation: gradient-animation 10s ease infinite;
+  animation: gradient-animation 5s ease infinite;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -22,7 +22,7 @@
 
 .header {
   margin: 0;
-  font-size: 50px;
+  font-size: 55px;
   font-weight: bold;
   color: white;
 }
@@ -96,6 +96,11 @@
   justify-content: center;
   align-items: center;
   padding-bottom: 30px;
+}
+
+.sword-logo {
+  width: 65px;
+  height: 65px;
 }
 
 .twitter-logo {
